--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -10,17 +10,17 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Nifemi | Portfolio</title>
+    <title>Zion | Portfolio</title>
     <meta
       name="description"
-      content="A cracked Software Engineer, Crypto Enthusiast and Community Manager passionate about building tools that make a difference and leading effective teams."
+      content="A cracked Cyber expert, Data Analyst, IT administrator and Data Base Manager"
     />
 
     <!-- Google / Search Engine Tags -->
-    <meta itemprop="name" content="Nifemi | Portfolio" />
+    <meta itemprop="name" content="Zion | Portfolio" />
     <meta
       itemprop="description"
-      content="A Cracked Software Engineer, Crypto Enthusiast and Community Manager passionate about building tools that make a difference and leading effective teams."
+      content="A cracked Cyber expert, Data Analyst, IT administrator and Data Base Manager"
     />
     <!-- <meta
       itemprop="image"
@@ -28,12 +28,12 @@
     /> -->
 
     <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://nifemi-portolios.netlify.app/" />
+    <!-- <meta property="og:url" content="https://nifemi-portolios.netlify.app/" /> -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Nifemi | Portfolio" />
+    <meta property="og:title" content="Zion | Portfolio" />
     <meta
       property="og:description"
-      content="A Cracked Software Engineer, Crypto Enthusiast and Community Manager passionate about building tools that make a difference and leading effective teams."
+      content="A cracked Cyber expert, Data Analyst, IT administrator and Data Base Manager"
     />
     />
     <!-- <meta
@@ -43,10 +43,10 @@
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Nifemi | Portfolio" />
+    <meta name="twitter:title" content="Zion | Portfolio" />
     <meta
       name="twitter:description"
-      content="A Cracked Software Engineer, Crypto Enthusiast and Community Manager passionate about building tools that make a difference and leading effective teams."
+      content="A cracked Cyber expert, Data Analyst, IT administrator and Data Base Manager"
     />
     />
     <!-- <meta
